move assignment test out and add reason